--- a/Template_MVC/Areas/Admin/Views/Functions/FunctionMaintain.cshtml
+++ b/Template_MVC/Areas/Admin/Views/Functions/FunctionMaintain.cshtml
@@ -113,7 +113,7 @@
         el: '#app',
         data: {
             functions: [],
-            selectedFunc: {},            
+            selectedFunc: {},
             searchText: $("#input_Search").val(),
             insertFunc: {
                 function_name: "",
@@ -142,7 +142,7 @@
         methods: {
             fetchFunctions() {
                 var search = $("#input_Search").val();
-                axios.post('/Admin/Functions/QueryFunctions', {
+                axios.post('@Url.Content("~/Admin/Functions/QueryFunctions")', {
                     input: search
                 })
                 .then(response => {
@@ -156,16 +156,16 @@
                 });
             },
             EditFunctions(func) {
-                // Set the selected user.                
+                // Set the selected user.
                 this.selectedFunc = func;
                 console.log(this.selectedFunc);
             },
             UpdateFunctions(input) {
                 if (confirm('Are you sure update function ' + this.selectedFunc.function_name + '?')) {
                     var inputFunc = this.functions.find(func => func.function_id === input.function_id);
-                    
-                    axios.post('/Admin/Functions/UpdateFunctions', {
-                        input: inputFunc                        
+
+                    axios.post('@Url.Content("~/Admin/Functions/UpdateFunctions")', {
+                        input: inputFunc
                     })
                         .then(response => {
                             console.log(response);
@@ -187,7 +187,7 @@
             DeleteFunctions(func) {
                 if (confirm('Are you sure delete function ' + func.function_name + '?')) {
                     console.log('User clicked confirm');
-                    axios.post('/Admin/Functions/DeleteFunctions', {
+                    axios.post('@Url.Content("~/Admin/Functions/DeleteFunctions")', {
                         userId: func.function_id
                     })
                         .then(response => {
@@ -215,11 +215,11 @@
 
                 this.insertFunc.function_name = $("#add-function_name").val();
                 // this.insertFunc.parent_function_id = $("#add-parent_function_id").val();
-                this.insertFunc.function_description = $("#add-function_description").val();                
+                this.insertFunc.function_description = $("#add-function_description").val();
 
                 console.log(this.insertFunc);
 
-                axios.post('/Admin/Functions/AdminAddFunctions', {
+                axios.post('@Url.Content("~/Admin/Functions/AdminAddFunctions")', {
                     input: this.insertFunc
                 })
                 .then(response => {
