--- a/Template_MVC/Views/Shared/_ErrorLayout.cshtml
+++ b/Template_MVC/Views/Shared/_ErrorLayout.cshtml
@@ -2,6 +2,8 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link href="@Url.Content("~/favicon.ico")" rel="shortcut icon" type="image/x-icon" />
+
     <title>Error</title>
 </head>
 <body>
